<resources>
    <string name="app_name">Roomie</string>
    <string name="go_to_login_activity">Go to LogIn activity</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="don_t_have_an_account_register_here">¿No tienes una cuenta? Registrate aquí!</string>
    <string name="don_t_remember_password_click_here_to_see_hint">¿No recuerdas la contraseña? Haz click aquí!</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="rol">Rol</string>
    <string name="huesped">Huesped</string>
    <string name="arrendador">Arrendador</string>
    <string name="google_maps_api_key">AIzaSyBS7QrBC0ByzOgb6UYZUxzH4hxgWEuaJ4U</string>
    <string name="password_hint">Pista de contraseña</string>
    <string name="enter_app">Enter app</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="add">Añadir</string>
    <string name="edit">Editar</string>
    <string name="all">All</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="navigation_drawer_open">close drawer</string>
    <string name="navigation_drawer_close">open drawer</string>
    <string name="description">Descripción</string>
    <string name="no_description_found">NO DESCRIPTION FOUND</string>
    <string name="images">Images</string>
    <string name="media">Media</string>
    <string name="surface">Superficie</string>
    <string name="number_of_rooms">Número de habitaciones</string>
    <string name="number_of_bedrooms">Número de dormitorios</string>
    <string name="filtered_list">Filtered list</string>
    <string name="location">Ubicación</string>
    <string name="long_description">Descripción larga</string>
    <string name="submit">Enviar</string>
    <string name="points_of_interest">Puntos de interés</string>
    <string name="address">Dirección</string>
    <string name="map">Mapa</string>
    <string name="amount">Monto</string>
    <string name="no_entries">No Entries</string>
    <string name="get_filtered_list">Obtener lista de filtro</string>
    <string name="price">Precio en dólares</string>
    <string name="email_not_found">It was not found a user with that email</string>
    <string name="no_possible_to_acess_hint">Error it was not possible to retrieve password hint</string>
    <string name="change_currency">Change_currency</string>
    <string name="change_to_dollars">Change to dollars</string>
    <string name="change_to_d">Change to dollars</string>
    <string name="change_to_euro">Change to euros</string>
    <string name="price_in_euros">Price in Euros</string>
    <string name="all_fileds">All fields must be answer, please try again</string>
    <string name="register_sucess">Register succeed</string>
    <string name="ry_again">Register failed, please try again</string>
    <string name="agent_responsible">Agent responsible</string>
    <string name="agent">Agente</string>
    <string name="you_must_add_at_least">You must add at least one photo</string>
    <string name="sign_up">Registro</string>
    <string name="you_must_add_a_point_of_int">You must add a point of interest</string>
    <string name="error">Error</string>
    <string name="roomie_updated">Roomie updated</string>
    <string name="roomie_added">Roomie added</string>
    <string name="updated">updated</string>
    <string name="added">added</string>
    <string name="short_description">Descripción corta</string>
    <string name="type">Tipo</string>
    <string name="register">Registrarse</string>
    <string name="doesnt_have_map_permitions">This aplication doen\'t have permition to show the map</string>
    <string name="we_cant_show_the_map">We can\'t show the map</string>
    <string name="ok">Ok</string>
    <string name="not_sold_yet">Not sold yet</string>
    <string name="price_not_set_yet">No price info</string>
</resources>
