<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_toolbar_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_toolbar_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_toolbar_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_toolbar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
</menu>