<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_drawer_all"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_drawer_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/filtered_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_drawer_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="Mapa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_drawer_loan"
        android:icon="@drawable/ic_euro_symbol_black_24dp"
        android:title="Simulador de préstamo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_drawer_sing_out"
        android:icon="@drawable/ic_close_black_24dp"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom" />
</menu>