<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UpdateAndAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <TextView
            android:hint="Url"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_update_and_add_media_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_update_and_add_media_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/activity_update_and_add_media_add_icon"
                android:inputType="textUri" />

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/activity_update_and_add_media_add_icon"
                android:layout_alignParentRight="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add_black_24dp"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/short_description"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_short_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_description"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_long_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage" />

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surface"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_surface_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="m2"
            android:inputType="number" />

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_rooms"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_num_of_rooms_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_of_bedrooms"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_num_of_bedrooms_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_marginTop="@dimen/update_add_margin_top_titles"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginStart="@dimen/update_add_margin_left_titles"
            />

        <EditText
            android:id="@+id/activity_update_and_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:inputType="textLongMessage" />

    </LinearLayout>

</ScrollView>